--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,38 @@
 
+@article{pursley_earthquake_2013,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 2005–2009},
+	volume = {35},
+	abstract = {The earliest documented records of large earthquakes in New Mexico go back to the early 1900s, and seismicity has been monitored instrumentally since the early 1960s. This catalog is a continuation of previous catalogs spanning 1962 through 2004 and includes 165 earthquakes Md ≥ 2.0. In addition it also includes all located events with Md ≥ 0 in New Mexico. Similar to the 1999–2004 catalog, we found that a large number of earthquakes Md ≥ 2.0 were located in two distinct regions. One of these regions is in southeastern New Mexico near the Dagger Draw oil field (32\% of all events with Md ≥ 2.0), and the other is in northeastern New Mexico within and surrounding the coalbed methane fields near Raton (44\% of all events with Md ≥ 2.0). Only 5\% of the larger earthquakes occurred in the Socorro Seismic Anomaly region. The remaining events were scattered throughout New Mexico, southeastern Colorado, eastern Arizona, northern Mexico, and western Texas.},
+	language = {en},
+	number = {1},
+	journal = {New Mexico Geology},
+	author = {Pursley, Jana},
+	year = {2013},
+	pages = {3--12},
+}
+
+@article{sanford_earthquake_2006,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas {II}: 1999–2004},
+	volume = {28},
+	abstract = {Earthquakes in New Mexico and bordering areas have been instrumentally located since 1962 at New Mexico Institute of Mining and Technology. Catalogs of these earthquakes for the period 1962 through 1998 were published in 2002. This report extends the cataloging of earthquakes for the region through 2004. For this 6-yr period 198 earthquakes with magnitudes of 2.0 or greater were located. An unusual feature of the seismicity 1999 through 2004 is that 63\% of the earthquakes were concentrated in two swarms, one near water disposal wells on the western edge of the Dagger Draw oil field in southeastern New Mexico, and the other within and bordering the coalbed methane fields of the Raton Basin in northeastern New Mexico. We suggest that the proximity of these swarms to oil and gas fields may indicate that the earthquakes are induced by destabilization of the crust through production and waste disposal practices. The remaining 37\% of the earthquakes 1999 through 2004 were concentrated near Socorro and west Texas. Except for the Socorro area, activity along the Rio Grande rift was low.},
+	language = {en},
+	number = {4},
+	journal = {New Mexico Geology},
+	author = {Sanford, Allan R},
+	year = {2006},
+	pages = {99--109},
+}
+
+@article{sanford_earthquake_2002,
+	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
+	volume = {210},
+	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
+	journal = {New Mexico Bureau of Geology and Mineral Resources Circular},
+	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
+	year = {2002},
+	pages = {1--9},
+}
+
 @article{keller_comparative_1991,
 	title = {A comparative study of the {Rio} {Grande} and {Kenya} rifts},
 	volume = {197},
@@ -63,13 +97,6 @@
 	journal = {Search Earthquake Catalog},
 	author = {{USGS}},
 	year = {2021},
-}
-
-@article{sanford_earthquake_2002,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 1869-1998},
-	shorttitle = {Earthquake catalogs for {New} {Mexico} and bordering areas},
-	author = {Sanford, Allan and Lin, Kuo-Wan and Tsai, I-ching and Jaksha, Lawrence},
-	year = {2002},
 }
 
 @article{sanford_earthquake_2002-1,
@@ -3029,28 +3056,6 @@ Quantec Geoscience Inc.}},
 	language = {en},
 	urldate = {2021-01-25},
 	journal = {The Maritime Executive},
-}
-
-@article{pursley_earthquake_2013,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas: 2005–2009},
-	volume = {35},
-	abstract = {The earliest documented records of large earthquakes in New Mexico go back to the early 1900s, and seismicity has been monitored instrumentally since the early 1960s. This catalog is a continuation of previous catalogs spanning 1962 through 2004 and includes 165 earthquakes Md ≥ 2.0. In addition it also includes all located events with Md ≥ 0 in New Mexico. Similar to the 1999–2004 catalog, we found that a large number of earthquakes Md ≥ 2.0 were located in two distinct regions. One of these regions is in southeastern New Mexico near the Dagger Draw oil field (32\% of all events with Md ≥ 2.0), and the other is in northeastern New Mexico within and surrounding the coalbed methane fields near Raton (44\% of all events with Md ≥ 2.0). Only 5\% of the larger earthquakes occurred in the Socorro Seismic Anomaly region. The remaining events were scattered throughout New Mexico, southeastern Colorado, eastern Arizona, northern Mexico, and western Texas.},
-	language = {en},
-	number = {1},
-	author = {Pursley, Jana},
-	year = {2013},
-	pages = {10},
-}
-
-@article{sanford_earthquake_2006,
-	title = {Earthquake catalogs for {New} {Mexico} and bordering areas {II}: 1999–2004},
-	volume = {28},
-	abstract = {Earthquakes in New Mexico and bordering areas have been instrumentally located since 1962 at New Mexico Institute of Mining and Technology. Catalogs of these earthquakes for the period 1962 through 1998 were published in 2002. This report extends the cataloging of earthquakes for the region through 2004. For this 6-yr period 198 earthquakes with magnitudes of 2.0 or greater were located. An unusual feature of the seismicity 1999 through 2004 is that 63\% of the earthquakes were concentrated in two swarms, one near water disposal wells on the western edge of the Dagger Draw oil field in southeastern New Mexico, and the other within and bordering the coalbed methane fields of the Raton Basin in northeastern New Mexico. We suggest that the proximity of these swarms to oil and gas fields may indicate that the earthquakes are induced by destabilization of the crust through production and waste disposal practices. The remaining 37\% of the earthquakes 1999 through 2004 were concentrated near Socorro and west Texas. Except for the Socorro area, activity along the Rio Grande rift was low.},
-	language = {en},
-	number = {4},
-	author = {Sanford, Allan R},
-	year = {2006},
-	pages = {11},
 }
 
 @book{pareto_cours_1964,
